# Proyecto1-PII

./: ArchivoInvalidoException.cpp  ArchivoInvalidoException.h  CMakeLists.txt  Equipo.cpp  Equipo.h  Excepciones.cpp  Excepciones.h  FormatoInvalidoException.cpp  FormatoInvalidoException.h  GestorEquipos.cpp  GestorEquipos.h  Incidencia.cpp  Incidencia.h  Mantenimiento.cpp  Mantenimiento.h  Menu.cpp  Menu.h  OperacionInconsistenteException.cpp  OperacionInconsistenteException.h  PresentacionTecnica.md  Registro.cpp  Registro.h  Simulador.cpp  Simulador.h  main.cpp  registroCompleto.cpp  registroCompleto.h  registroReparados.cpp  registroReparados.h
